examples/test/testpolicy10310.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10310
  namespace: namespace117
spec:
  podSelector:
    matchLabels:
      key35: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value49
          key26: value12
      podSelector:
        matchLabels:
          key12: value14
          key39: value31
          key21: value16
